# raspbot-v2-rust

./: .gitignore  Cargo.toml  Makefile  robot_config.yaml
.cargo/: config.toml
Documents/: IMPLEMENTATION_BRIEF.md  IMPLEMENTATION_BRIEF_v3.md  REQUIREMENTS.md  phase_14_2_2_hardware_safety.md  phase_14_2_3_measurement_runs.md  requirements_v3.md  requirements_v5.md  robot_config.yaml
Documents/archive/: IMPLEMENTATION_BRIEF_v3_1.md  requirements_v5_1.md
bus/: Cargo.toml
bus/src/: lib.rs
calibration/: Cargo.toml
calibration/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
control/: Cargo.toml
control/src/: lib.rs
core_types/: Cargo.toml
core_types/src/: lib.rs
executive/: Cargo.toml
executive/src/: lib.rs
exploration_rl/: Cargo.toml
exploration_rl/examples/: collect_episodes.rs  sim_viz.rs
exploration_rl/src/: lib.rs
hal/: Cargo.toml  build.rs
hal/examples/: calibration_measure.rs  camera_test.rs  gimbal_test.rs  imu_test.rs  motor_test.rs  odometry_validate.rs  tof_test.rs  ultrasonic_test.rs
hal/src/: camera.rs  gimbal.rs  imu.rs  lib.rs  mjpeg.rs  motor.rs  tof.rs  ultrasonic.rs
hal/src/vl53l8cx_uld/: platform.c  platform.h  wrapper.c  wrapper.h
mapping/: Cargo.toml
mapping/src/: lib.rs
micro_slam/: Cargo.toml
micro_slam/src/: lib.rs
perception/: Cargo.toml
perception/examples/: depth_bench.rs
perception/src/: depth.rs  event_gate.rs  lib.rs  pseudo_lidar.rs
planning/: Cargo.toml
planning/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: main.rs
runtime/src/tasks/: control_task.rs  mapping_task.rs  mod.rs  safety_task.rs
safety/: Cargo.toml
safety/src/: lib.rs
scripts/: export_midas.py  install_ort_pi.sh  plot_motor_test.py  requirements.txt  train_awr.py  train_frontier_selector.py
sim_fast/: Cargo.toml
sim_fast/examples/: calibration_validate.rs  crash_diagnostic.rs  validate_scenarios.rs
sim_fast/src/: lib.rs
sim_fast/src/hal_impls/: gimbal.rs  imu.rs  mod.rs  motor.rs  ultrasonic.rs
sim_vision/: Cargo.toml
sim_vision/src/: lib.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs
ui_bridge/: Cargo.toml
ui_bridge/src/: lib.rs
