[package]
name = "hal"
version = "0.1.0"
edition = "2021"

[features]
# usb-camera: real V4L2 driver (requires libclang on build host, Linux V4L2 headers)
# mpu6050:    real MPU-6050 driver via rppal I2C (Pi only)
# Dev-machine: cargo check --no-default-features
default    = ["usb-camera", "mpu6050"]
usb-camera = ["dep:v4l"]
mpu6050    = []

[dependencies]
core_types  = { workspace = true }
config      = { workspace = true }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
image       = { workspace = true }
rppal       = "0.19"
v4l         = { version = "0.14", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
