[package]
name = "perception"
version = "0.1.0"
edition = "2021"

[features]
# onnx: real MiDaS inference via ort.  Requires the ort shared library at
# runtime (auto-downloaded by ort's "download-binaries" feature on first build).
default = ["onnx"]
onnx    = ["dep:ort"]

[dependencies]
core_types  = { workspace = true }
bus         = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
ort         = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
