[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "robot"
path = "src/main.rs"

# Feature flags mirror hal's hardware features.
# Dev machines without libclang/ORT: cargo check/run --no-default-features
[features]
default     = ["usb-camera", "mpu6050", "onnx"]
usb-camera  = ["hal/usb-camera"]        # real V4L2 camera (requires libclang on build host)
mpu6050     = ["hal/mpu6050"]           # real MPU-6050 IMU
onnx        = ["perception/onnx"]       # real MiDaS inference (requires ORT .so at runtime)

[dependencies]
core_types         = { workspace = true }
bus                = { workspace = true }
config             = { workspace = true }
calibration        = { workspace = true }
executive          = { workspace = true }
ui_bridge          = { workspace = true }
telemetry          = { workspace = true }
hal                = { workspace = true, default-features = false }
perception         = { workspace = true, default-features = false }
micro_slam         = { workspace = true }
mapping            = { workspace = true }
planning           = { workspace = true }
control            = { workspace = true }
safety             = { workspace = true }
exploration_rl     = { workspace = true }
sim_fast           = { workspace = true }
sim_vision         = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
