[package]
name = "sim_vision"
version = "0.1.0"
edition = "2021"

[dependencies]
core_types   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
hal          = { workspace = true }
config       = { workspace = true }
sim_fast     = { workspace = true }
