[package]
name = "ui_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
core_types         = { workspace = true }
bus                = { workspace = true }
tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }
futures-util       = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
